feat(all versions): key command allows to press multiple keys