@@ -1,7 +1,7 @@
-
 package me.earth.headlessmc.mc;
 
 import com.mojang.blaze3d.platform.InputConstants;
+import me.earth.headlessmc.mc.keyboard.AbstractKeyboard;
 import me.earth.headlessmc.mc.keyboard.Key;
 import me.earth.headlessmc.mc.keyboard.Keyboard;
 import me.earth.headlessmc.mc.mixins.IInputConstantsKey;
@@ -10,9 +10,8 @@ import org.jetbrains.annotations.NotNull;
 import org.lwjgl.glfw.GLFW;
 
 import java.util.Iterator;
-import java.util.stream.Collectors;
 
-public class KeyboardImpl implements Keyboard {
+public class KeyboardImpl extends AbstractKeyboard implements Keyboard {
     private final Minecraft mc;
 
     public KeyboardImpl(Minecraft mc) {
@@ -20,7 +19,7 @@ public class KeyboardImpl implements Keyboard {
     }
 
     @Override
-    public void press(Key key) {
+    public void performKeyPress(Key key) {
         mc.keyboardHandler.keyPress(
                 mc.getWindow().getWindow(),
                 key.getId(),
@@ -30,7 +29,7 @@ public class KeyboardImpl implements Keyboard {
     }
 
     @Override
-    public void release(Key key) {
+    public void performKeyRelease(Key key) {
         mc.keyboardHandler.keyPress(
                 mc.getWindow().getWindow(),
                 key.getId(),
@@ -50,7 +49,7 @@ public class KeyboardImpl implements Keyboard {
                         k.getType() == InputConstants.Type.SCANCODE ? -1 : k.getValue(),
                         k.getType() == InputConstants.Type.SCANCODE ? k.getValue() : -1))
                 .sorted()
-                .collect(Collectors.toList())
+                .toList()
                 .iterator();
     }
 
